# rdocs

./: .gitignore  Cargo.toml  README.md
.docs/: _quarto.yml  index.qmd
.github/workflows/: build_docs.yml  r_check.yml
_docs/: _quarto.yml  index.qmd
_docs/_site/: about.html  index.html  search.json
_docs/_site/contents/: functions.html
_docs/contents/: functions.qmd
docs/: _quarto.yml  about.html  functions.html  functions.qmd  index.html  search.json
docs/_site/: about.html  functions.html  index.html  search.json
docs/contents/: functions.html
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
rdocs/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE
rdocs/R/: main.R  utils.R  zzz.r
src/: main.R  main.rs
src/_docs/contents/: functions.qmd  harray.qmd
src/docs/: harray.qmd  hfft.qmd  search.json
src/docs/contents/: functions.html  harray.html
src/testdir/: harray.rs  hfft.rs
